# NCores

./: CMakeLists.txt  README.md  main.cpp
res/sandbox/: people.json  q14.csf
res/schema/: nest.avsc  ol.txt  q6.txt  single.avsc
res/schema/custom/: fetch.avsc  nest.avsc  q3.txt  query.qsc
res/schema/ppsl/: nest.avsc
res/test/filtertest/: q1.txt  query.qsc
res/test/optiontest/: nest.avsc
res/tpch/: partsupp.tbl
src/block/: BlockManager.h
src/block/buffer/: BlockCache.cpp  BlockCache.h  CoresAppender.h  CoresBlock.h  CoresIterator.h  CoresRandomAccessor.h
src/bloom/: all.h  bitvector.cpp  counter_vector.cpp  counter_vector.h  hash.cpp  hash.h  libbl_bitvector.h  libbl_bloom_filter.h  wrap.h
src/bloom/bloom_filter/: a2.cpp  a2.h  basic.cpp  basic.h  bitwise.cpp  bitwise.h  counting.cpp  counting.h  stable.cpp  stable.h
src/btree/: BTreeEntry.cpp  BTreeEntry.h  BTreeNode.cpp  BTreeNode.h  SerialBTree.cpp  SerialBTree.h
src/btree/cache/: LSMCache.h  cache.cpp
src/btree/misc/: global.cpp  global.h  querytype.h
src/bztree/: PMwCAS.cpp  PMwCAS.h  bzconfig.h  bztree.h  ebr.cpp  ebr.h  gc.cpp  gc.h  rel_ptr.h  test.h  utils.h
src/columnar/: Columnar.h  ColumnarFile.h  ColumnarHeader.h
src/fdtree/: Timer.cpp  Timer.h  btree.cpp  btree.h  buffer.cpp  buffer.h  error.cpp  error.h  fdtree.cpp  fdtree.h  lruque.cpp  lruque.h  model.cpp  pageTable.cpp  pageTable.h  slice.h  storage.cpp  storage.h
src/flatschema/: CMakeLists.txt
src/flatschema/bitweaving/: bitvector.h  column.h  iterator.h  options.h  status.h  table.h  types.h
src/flatschema/src/: bitvector.cpp  bitvector_block.cpp  bitvector_block.h  bitvector_iterator.cpp  bitvector_iterator.h  bitwise.h  bwh_column_block.cpp  bwh_column_block.h  bwh_column_iterator.cpp  bwh_column_iterator.h  bwv_column_block.cpp  bwv_column_block.h  bwv_column_iterator.cpp  bwv_column_iterator.h  column.cpp  column_block.h  column_iterator.cpp  column_iterator.h  doxy.h  env.cpp  env.h  file.cpp  file.h  iterator.cpp  macros.h  naive_column_block.cpp  naive_column_block.h  options.cpp  status.cpp  table.cpp  utility.cpp  utility.h
src/flatschema/test/: dummy.cpp  tpchVerify.cpp
src/io/codec/: lz4Codec.h
src/io/file/: BatchFileWriter.h  ColumnarData.h
src/lsmtree/: bitvector.h  bloom.c  bloom_filter.h  blossom.h  buffer.c  buffer.h  debug.h  index.c  index.h  log.c  log.h  murmur3.c  platform.h  skiplist.c  skiplist.h  util.h
src/metadata/column/: ColumnDescriptor.h
src/metadata/parser/: EntityDescriptor.cpp  EntityDescriptor.h  Generic.h  JsonParser.h
src/metadata/schema/: Filter.h  MetaData.h  Node.h  Parser.h  Schema.h  Types.h
src/osdep/: FileOperations.h
src/utils/: Bitset.h  CJsonObject.cpp  CJsonObject.h  HashSet.h  LazyGK.h  cJSON.c  cJSON.h  utils.cpp  utils.h
test/arrow/unit/: ArrowDummy.cpp
test/block/: BlockAppendTest.cpp  BlockManagerTest.cpp
test/block/buffer/: BlockCacheTest.cpp
test/bloom/: LibblBloomFilterBasicTest.cpp
test/btree/: FDBTreeDbg.cpp  FDBTreeGen.cpp  FDBTreeLoad.cpp  FDBTreeSearch.cpp  FDTreeDbg.cpp  FDTreeTest.cpp  btreeTest.cpp  btreeTestBuild.cpp  btreeTestSearch.cpp
test/bztree/: bzTreeTest.cpp
test/io/: DiskAnsyncIOTest.cpp  DiskPerformanceTest.cpp  RandomSeekTest.cpp
test/io/codec/: lz4CodecTest.cpp
test/lsmtree/: BloomTest.c  LSMBloomFilterTest.cpp  LSMBufferTest.c  LSMIndexDbg.c  LSMIndexTest.c  LSMSkiplistTest.c
test/metadata/parser/: PPSLNullTest.cpp  TestSchema.cpp  TestTypes.cpp
test/metadata/unittest/: DummyUnitTest.cpp  FilterUnitTest.cpp  OptionUnitTest.cpp
test/osdep/: AnyBasicTest.cpp  DotNetCompSuite.cpp  DummyTest.cpp  MallocAndBeyondTest.cpp  SIMDBasisTest.cpp
test/primitive/: BandwidthTest.cpp  BasicTypeTest.cpp  ParallelBandwidthTest.cpp
test/stdlockfree/: stdcasTest.cpp
test/utils/: BitsetTest.cpp  ClearMemory.cpp  GKTests.cpp
